--- a/TicTacToe_FE/src/index.css
+++ b/TicTacToe_FE/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --BgColor: #0f1b21;
+  --BgColorHighlight: #172a33;
+  --lbColor: #d4e4e2;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,9 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #0f1b21;
+  background: var(--BgColor);
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
