--- a/TicTacToe_FE/src/components/MainMenu.css
+++ b/TicTacToe_FE/src/components/MainMenu.css
@@ -1,10 +1,11 @@
 .main-menu {
-  width: 1000px;
-  height: 1000px;
-  background-color: #aa7f7f;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   font-size: 24px;
-  border: 1px solid #ccc;
+  border: 0px solid #ccc;
+}
+.mainMenuBtn {
+  width: 200px;
 }
