--- a/TicTacToe_FE/src/components/Navbar/NavBar.css
+++ b/TicTacToe_FE/src/components/Navbar/NavBar.css
@@ -1,10 +1,23 @@
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #805b5b;
-  z-index: 1000;
-  width: 100%;
-  box-shadow: 0px 2px 10px #86b0d411;
+  display: flex;
+  align-items: center;
+  background-color: #ffffff00;
+  border-bottom: 3px solid rgba(255, 255, 255, 0.226);
+}
+
+.container-fluid {
+  display: flex;
+  color: rgb(255, 255, 255);
+  align-items: center;
+  flex-direction: row;
+}
+.container-fluid1 {
+  display: flex;
+  user-select: none;
+  align-items: center;
+  cursor: pointer;
+}
+.usernameSpan {
+  user-select: none;
+  cursor: pointer;
 }
