--- a/TicTacToe_FE/src/components/common/Form.css
+++ b/TicTacToe_FE/src/components/common/Form.css
@@ -1,3 +1,16 @@
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  margin: auto;
+}
+
+.label-container {
+  text-align: center;
+}
+
 .button-container {
   text-align: center;
 }
@@ -5,7 +18,7 @@
 .loginBtn {
   display: inline-block;
   margin-top: 20px;
-  width: 100px;
+  width: 100px; /* Button width */
 }
 
 .formLabel {
