--- a/TicTacToe_FE/src/components/common/Input.css
+++ b/TicTacToe_FE/src/components/common/Input.css
@@ -2,11 +2,15 @@
   position: relative;
   margin-bottom: 15px;
   margin-top: 15px;
+  width: 300px;
 }
 .invalid-feedback {
-  display: block;
+  display: flex;
   height: 10px;
   font-size: 12px;
+}
+.input {
+  width: 200px;
 }
 .inputLabel {
   margin-bottom: 5px;
