--- a/TicTacToe_FE/src/components/Game/Style/Game.css
+++ b/TicTacToe_FE/src/components/Game/Style/Game.css
@@ -42,3 +42,14 @@
 button:hover {
   background-color: var(--BgColor);
 }
+.contaier {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 20px;
+}
+.label {
+  margin-top: 10px;
+  color: brown;
+}
