--- a/TicTacToe_FE/src/components/common/Style/Table.css
+++ b/TicTacToe_FE/src/components/common/Style/Table.css
@@ -7,8 +7,11 @@
 .game_history-table h2 {
   text-align: left;
   color: #425242;
-  font-size: 1.5rem;
+  font-size: 30px;
+  font-weight: bold;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .table1 {
@@ -40,4 +43,35 @@
   padding: 10px 15px;
   text-align: left;
   color: #f1f1f1;
+}
+.pagination-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  gap: 10px;
+}
+
+.pagination-controls button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+.pagination-controls button:hover {
+  background-color: #0056b3;
+}
+
+.pagination-controls button:disabled {
+  background-color: #ccc;
+  color: #666;
+}
+
+.pagination-controls span {
+  font-size: 16px;
+  color: #f0f0f0;
 }
